# ArmMotionTracking-IMU

./: 99-chin.rules  CMakeLists.txt  package.xml
bak/urdf/old/: kinematic.py  kinrobo.py
launch/: display.launch  new_display.launch
msg/: arm_robot.msg  arm_sensor.msg
scripts/: NewDevine.py  Robot.py  RobotArm.py  Sensor.py  app_run.py  config.json  config_newdevine.json  example.py  kcf.py  kinematic.py  new_kinematic.py  test_script.py
urdf/: arm.urdf  robot_arm.urdf
