<?xml version="1.0"?>
<package format="2">
  <name>imu_project</name>
  <version>0.0.0</version>
  <description>The imu_project package</description>

  <maintainer email="wuttipat.cho@anman.co.th">Liews Wuttipat</maintainer>
  <license>BSD</license>

  <!-- <url type="repository">http://wiki.ros.org/imu_project</url> -->
  <author email="wuttipat.cho@anman.co.th">Liews Wuttipat</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
